--- a/errorPage.html
+++ b/errorPage.html
@@ -10,16 +10,8 @@
     {% include 'nav.html' %}
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Comic of the Day</h1>
-          <div>
-            <div class="card" style="width: 18rem;">
-              <img src="{{data.img}}" class="card-img-top" alt="{{data.alt}}">
-              <div class="card-body">
-                <h5 class="card-title">{{data.safe_title}}</h5>
-                <p class="card-text">{{data.alt}}</p>
-                <a href="{{data.img}}" class="btn btn-primary">Click for Larger Image</a>
-              </div>
-            </div>
+          <h1 class="display-3">Oops something went wrong. Please try again later...</h1>
+         
           </div>
           <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
