--- a/pastComic.html
+++ b/pastComic.html
@@ -10,7 +10,7 @@
     {% include 'nav.html' %}
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Comic of the Day</h1>
+          <h1 class="display-3">Past Comic</h1>
           <div>
             <div class="card" style="width: 18rem;">
               <img src="{{data.img}}" class="card-img-top" alt="{{data.alt}}">
