--- a/facts.html
+++ b/facts.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dog Breeds</title>
+    <title>Facts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     {% include "nav.html" %}
     <h1>Hello, world!</h1>
     <p>
-     <a href="https://dogapi.dog/api/v2/breeds?page[number]=1">Click Here</a>
-        
+      hello
     </p>
     
   </body>
